--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,10 @@ typings/
 
 # next.js build output
 .next
+.idea/encodings.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/turmy.iml
+.idea/vcs.xml
+.idea/workspace.xml
+desktop.ini
