--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,6 @@
 {
- "url":" ",
- "avatarUrl": "https://i.imgur.com/aSqkpCU.png"
+ "username":"Turmy",
+ "avatarUrl": "https://i.imgur.com/aSqkpCU.png",
+ "token": "",
+ "url":""
 }
