--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
-    "discord-webhooks": "^1.0.0",
+    "discord.js": "^11.4.2",
     "readline": "^1.3.0"
   }
 }
