Nightly Build (WIP)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git+https://github.com/OtisGoodman/Turmy.git"
   },
   "author": "Otis_Goodman",
-  "license": "ISC",
+  "license": "GNU",
   "bugs": {
     "url": "https://github.com/OtisGoodman/Turmy/issues"
   },
